--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,17 @@
 [project]
 name = "mcp-doc"
 version = "0.1.0"
-description = "A Docx document processing service based on the FastMCP library, supporting the creation, editing, and management of Word documents using AI assistants in Cursor"
+description = "A Docx document processing service based on the FastMCP library..."
 requires-python = ">=3.10"
-dependencies = [
-    "python-docx",
-    "mcp",
-]
+# Added fastmcp here so it installs automatically
+dependencies = ["python-docx", "mcp", "fastmcp"]
+
+[project.scripts]
+mcp-doc = "server:main"
 
 [dependency-groups]
-dev = [
-    "mypy>=1.19.0",
-]
+dev = ["mypy>=1.19.0"]
 
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
