--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ mcp-doc = "server:main"
 [dependency-groups]
 dev = ["mypy>=1.19.0"]
 
+[tool.hatch.build.targets.wheel]
+only-include = ["server.py"]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
