--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ requires-python = ">=3.10"
 dependencies = ["python-docx", "mcp", "fastmcp"]
 
 [project.scripts]
-mcp-doc = "server:main"
+mcp-doc = "src.mcp_doc.main:main"
 
 [dependency-groups]
 dev = ["mypy>=1.19.0"]
 
 [tool.hatch.build.targets.wheel]
-only-include = ["server.py"]
+only-include = ["src/mcp_doc"]
 
 [build-system]
 requires = ["hatchling"]
